--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=never
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
