--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 
+
+logging.level.com.iron.mymarket=DEBUG
+logging.level.org.springframework.web.server.session=DEBUG
+logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=TRACE
+
