--- a/market-app/src/main/resources/application.properties
+++ b/market-app/src/main/resources/application.properties
@@ -18,3 +18,7 @@ logging.level.com.iron.mymarket=DEBUG
 logging.level.org.springframework.web.server.session=DEBUG
 logging.level.org.springframework.web.server.adapter.HttpWebHandlerAdapter=TRACE
 
+spring.data.redis.host = 127.0.0.1
+spring.data.redis.port = 6379
+spring.data.cache.time-to-live = PT1M
+
