* tests fixed after changes

--- a/market-app/src/test/resources/application-test.properties
+++ b/market-app/src/test/resources/application-test.properties
@@ -4,3 +4,4 @@ spring.redis lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
 
 spring.cache.type=none
+payment.service.url=http://payment-service:8081
